--- a/sections/sobremi.html
+++ b/sections/sobremi.html
@@ -9,7 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../style.css/style.css">
+    <link rel="stylesheet" href="../style/estilos.css">
     
    
     <title>Sobre Mí</title>
@@ -24,7 +24,7 @@
         <h1>Sobre mí</h1>
     </header>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-darkgrey">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">Home</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href=".//sections.html/sobremi.html">Sobre Mí</a>
+              <a class="nav-link active" aria-current="page" href="./sections.html/sobremi.html">Sobre Mí</a>
               <a class="nav-link active" href="./planesdealimentacion.html">Planes</a>
               <a class="nav-link active" href="./combos.html">Combos</a>
               <a class="nav-link active" href="./mundosalud.html">Mundo Salud</a>
@@ -94,5 +94,8 @@
     </footer>
 
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
