--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -32,7 +32,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="./sections.html/sobremi.html">Sobre Mí</a>
+              <a class="nav-link active" aria-current="page" href="./sobremi.html">Sobre Mí</a>
               <a class="nav-link active" href="./planesdealimentacion.html">Planes</a>
               <a class="nav-link active" href="./combos.html">Combos</a>
               <a class="nav-link active" href="./mundosalud.html">Mundo Salud</a>
