--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="./style/estilos.css">
     
     <title>NutricionAT</title>
+    <meta name="description" content="Plataforma de planes de alimentación y rutinas de entrenamiento online. Creada por profesionales de la salud donde tendrás las últimas novedades sobre nutrición y entrenamiento">
+    <meta name="author" content="Andrea Teraccio">
+    <meta name="copyright" content="NutricionAT">
+
+    <meta property="og:title" content=NutricionAT>
+    <meta property="og:site_name" content=NutricionAT>
+    <meta property="og:url" content="">
+    <meta property="og:description" content="">
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+
+
 </head>
 <body>
 
