--- a/sections/combos.html
+++ b/sections/combos.html
@@ -13,6 +13,9 @@
     
     
     <title>Combos</title>
+    <meta name="description" content="Conocé los combos de nutrición y entrenamiento que tenemos para vos. 100% online">
+    <meta name="author" content="Andrea Teraccio">
+    <meta name="copyright" content="NutricionAT">
 </head>
 <body>
 
