--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -13,6 +13,9 @@
     
     
     <title>Contacto</title>
+    <meta name="description" content="Dejanos tus dudas y consultas">
+    <meta name="author" content="Andrea Teraccio">
+    <meta name="copyright" content="NutricionAT">
 </head>
 <body>
 
