--- a/sections/mundosalud.html
+++ b/sections/mundosalud.html
@@ -13,6 +13,9 @@
     
     
     <title>Mundo Salud</title>
+    <meta name="description" content="Enterate las últimas novedades relacionadas a la salud">
+    <meta name="author" content="Andrea Teraccio">
+    <meta name="copyright" content="NutricionAT">
 </head>
 <body>
 
