--- a/sections/planesdealimentacion.html
+++ b/sections/planesdealimentacion.html
@@ -13,6 +13,9 @@
     
     
     <title>Planes</title>
+    <meta name="description" content="Conocé los planes de alimentación online y elegí el que se ajusta a tu medida">
+    <meta name="author" content="Andrea Teraccio">
+    <meta name="copyright" content="NutricionAT">
 </head>
 <body>
 
