--- a/sections/sobremi.html
+++ b/sections/sobremi.html
@@ -13,6 +13,9 @@
     
    
     <title>Sobre Mí</title>
+    <meta name="description" content="Conocé a la creadora de NutriciónAT">
+    <meta name="author" content="Andrea Teraccio">
+    <meta name="copyright" content="NutricionAT">
 </head>
 <body>
 
